lox-tests/tests/variable/use_local_in_initializer.stderr
ERROR: Cannot read local variable in its own initializer
 --> 3:11
  |
3 |   var a = a; // Error at 'a': Can't read local variable in its own initializer.
  |           ^
